@@ -1,2 +1,2 @@
 noinst_HEADERS = fitsfile.h channel.h image.h imagedb.h devclifoc.h devcliimg.h cameraimage.h \
-	appdbimage.h appimage.h
+	appdbimage.h appimage.h dbfilters.h
